janiczek.css
/* ... */
.section-container {
    text-align: center;
    padding: 5rem 0rem;
}
.section-container header {
    padding: 0rem 5rem;
}
.section-title {
    font-size: 3rem;
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    margin: 0px;
}
.subsection-title {
    font-size: 1.75rem;
    font-family: "Raleway", sans-serif;
    font-weight: normal;
    width: 100%;
}
.section-subtitle {
    font-size: 1.25rem;
    font-family: "Ubuntu", sans-serif;
    font-weight: normal;
}
.displaybox {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: top;
    flex-wrap: wrap;
    max-width: 1200px;
    margin: 0 auto;
    padding: 2rem 0rem;
}
.box-item {
    margin: 2rem;
    padding: 0;
    position: relative;
    max-width: 300px;
}
.box-item:hover {
    transform: translateY(-5px);
}
.box-item h4 {
    font-family: "Ubuntu", sans-serif;
    font-size: 1.25rem;
    margin: 0.5rem;
    color: #35373c;
}
.box-item p {
    font-family: "Droid Sans", sans-serif;
    margin: 0.5rem;
    color: #35373c;
}
.shadowed {
    box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
}

/* COVER PAGE */
.cover-page {
    background-image: url("./assets/IBM1401_Manufacturing_Landscape_1960.jpg");
    min-height: 100vh;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}
#hamburger {
    position: absolute;
    top: 20px;
    right: 20px;
    text-decoration: none;
    color: #40c48f;
}
.caption {
    text-align: center;
    color: #40c48f;
}
.caption h1 {
    font-size: 6rem;
    font-family: "Raleway", sans-serif;
    margin: 0px;
}
.caption h4 {
    font-size: 2.75rem;
    font-family: "Ubuntu", sans-serif;
    margin: 0px;
    font-weight: normal;
}
.button-list {
    position: absolute;
    bottom: 20px;
    left: 20px;
    display: inline;
}
.button-list a {
    text-decoration: none;
    font-size: 3vh;
    color: black;
}
.button-list a i:nth-child(1) {
    color: white;
}

/* NAVBAR */
#navbar {
    width: 100%;
    background-color: black;
    z-index: 3;
}
#navbar ul {
    text-align: center;
    vertical-align: middle;
    margin: 0 auto;
    padding: 0px;
}
#navbar ul a {
    text-decoration: none;
    color: white;
    font-weight: bold;
    font-size: 1.25rem;
    font-family: Anders, sans-serif;
    display: inline-block;
    vertical-align: middle;
    padding: 1rem 4%;
}
#navbar ul a:active {
    transform: translateY(0.2rem);
}
.glued {
    position: fixed;
    top: 0;
}
#logo {
    display: inline-block;
    vertical-align: middle;
    position: relative;
    font-size: 2.5rem;
    padding: 0% 4%;
    margin-top: -0.3rem;
    font-family: "Droid Sans", sans-serif;
    font-weight: 700;
    letter-spacing: -0.6rem;
    color: #40c48f;
}
#first {
    color: #7f0000;
    font-size: 2.5rem;
}

/* HEADER */
header.main {
    background-color: #F2F2F2;
    width: 100%;
    position: relative;
    padding-top: 3.65rem
    overflow-x: hidden;
}
.center {
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 3rem 2rem 5rem 2rem;
}
#welcome {
    color: #7f0000;
    padding: 0px;
    margin: 0rem 4rem 1rem 4rem;
    text-align: center;
    vertical-align: center;
}
#welcome h1 {
    font-size: 4rem;
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    margin: 0px;
    vertical-align: center;
}
#welcome p {
    font-size: 1.75rem;
    font-family: "Ubuntu", sans-serif;
    margin: 0px;
    vertical-align: center;
}
.slideshow {
    padding: 0rem 4.5rem;
}
.slideshow img {
    position: absolute;
    width: 432px;
    height: 253px;
    padding: 0%;
}
.slideshow img:nth-child(7) {
    visibility: hidden;
    width: 432px;
    height: 253px;
    position: static;
    padding: 0%;
}
.slideshow img:nth-child(6) {
    position: absolute;
    width: 460px;
    height: 392px;
    padding: 0%;
    margin-left: -14px;
    margin-top: -14px;
    z-index: 2;
}
@keyframes xfade{
    0%{
        opacity: 1;
      }
      20% {
        opacity:1;
      }
      23.3% {
        opacity:0;
      }
      96.7% {
        opacity:0;
      }
      100% {
        opacity:1;
      }
}
.slideshow img:nth-child(5) {
    animation: xfade 10s 0s infinite;
}
.slideshow img:nth-child(4) {
    animation: xfade 10s 2s infinite;
}
.slideshow img:nth-child(3) {
    animation: xfade 10s 4s infinite;
}
.slideshow img:nth-child(2) {
    animation: xfade 10s 6s infinite;
}
.slideshow img:nth-child(1) {
    animation: xfade 10s 8s infinite;
}

/* PROJECTS SECTION */
.box-item img {
    width: 100%;
    height: auto;
    max-height: 300px;
    padding: 0;
    margin: 0;
}
.hidden-info {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    text-decoration: none;
    text-align: left;
    opacity: 0;
    color: black;
    background-color: white;
    transition: all 1s;
}
.hidden-info:hover {
    opacity: 0.8;
}

/* SKILLS SECTION */
#skills {
    color: #40c48f;
    background-color: #d8f3e8;
}
/* based on http://www.cssscript.com/animated-circular-progress-bar-using-svg-path-animation/ */
@keyframes load{ 
    0% {
        stroke-dashoffset:0
    }
}
.circle-container {
    box-sizing: border-box;
    max-width: 14rem;
    padding: 2rem;
}
.circle {
    display: inline-block;
    position: relative;
    text-align: center;
    color: #93A2AC;
    font-family: "Droid Sans", sans-serif;
    margin: 0px;
}
.circle:before {
    content: attr(data-name);
    position: absolute;
    width: 100%;
    bottom: -2rem;
}
.circle:after {
    content: attr(data-percent);
    position: absolute;
    width: 100%;
    top: 3.7rem;
    left: 0;
    font-size: 2rem;
    text-align: center;
}
svg {
    width: 100%;
    height: 10rem;
    stroke: #003306;
}
svg:nth-child(2) {
    position: absolute;
    left: 0;
    top: 0;
    transform: rotate(-90deg);
}
/* ... */

